// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <ProductImage/> Debe de mostrar la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Pruebas en <ProductImage/> Debe de mostrar la imagen personalizada del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="hola"
  />
</div>
`;
